fixed spacing between paragraphs

--- a/style.css
+++ b/style.css
@@ -40,9 +40,6 @@ margin-left: auto;
 }
 
 *{
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
 	font-family: sans-serif, sans-serif;
 }
 
